Atualização da formatação do texto

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section>
       <article class="lado-direito">
         <h2>"Como está sendo a experiência até o momento?"</h2>
-        <p>Impressionante afirmar que na Trybe, em apenas 3 semanas, aprendi muito mais do que em vários semestres de faculdade e de ensino técnico, pautados na metodologia passiva tradicional.
+        <p><br>Impressionante afirmar que na Trybe, em apenas 3 semanas, aprendi muito mais do que em vários semestres de faculdade e de ensino técnico, pautados na metodologia passiva tradicional.
           <br>A metodologia ativa aplicada pela trybe, por mais que muitas vezes dê a sensação de que você não está aprendendo praticamente nada, no fim das contas você percebe que aprendeu muito mais, e consolidou mais ainda, do que no ensino passivo tradicional. <br><br>Méritos da Trybe, de toda a equipe. #VQV!
         </p>
       </article>
