--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h4 id="meu-nome">Jhonatan Coutinho Rangel</h4>
     </header>
     <!----------------------------------------- Seção-02: Listas de Lições ----------------------------------------------->
-    <div id="main"> 
+    <div id="main">
       <section class="lists">
         <h3 class="subtitle"> Lições Aprendidas: </h3>
         <ol id="licoes_aprendidas">
@@ -51,7 +51,7 @@
       <!---------------------------------------------- Seção-03: Artigos --------------------------------------------------->
       <aside>
         <article class="lists">
-          <h3 class="subtitle"> Sobre o Meu Aprendizado na Trybe </h3>
+          <h3 class="subtitle">Sobre o Meu Aprendizado</h3>
           <p class="lado-esquerdo">
             Na Trybe a rotina de aprendizado se faz em rítimo acelerado e constante. Todos os dias somos desafiados a aprender algo novo e, com empenho e dedicação, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. É um curso que não te dá espaço para arrastar dúvidas ou seguir adiante sem aprender por completo os onteúdos, pois cada nova etapa do processo de aprendizagem exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. Verdade seja dita: É um curso muito prático, rápido e empolgante, mas que também exige muito dos seus alunos.
           </p>
@@ -59,9 +59,9 @@
       </aside>
       <!-------------------------------------------------------------------------->
       <section class="secao">
-        <h3 id="metodologia" class="subtitle"> Metodologia de Aprendizado </h3>
+        <h3 id="metodologia" class="subtitle">Metodologia de Aprendizado</h3>
         <p class="lado-direito">
-          No início, procurei assistir os conteúdos nos dias e horários destinados para isso. Logo percebi que essa metodologia não seria promissora. Adotei então a seguinte postura: Estudar os conteúdos do dia seguinte já na noite do dia anterior e praticar os exercícios do dia já pela parte da manhã.
+          No início, procurei assistir os conteúdos nos dias e horários destinados para isso. Logo percebi que essa metodologia não seria promissora. Adotei então a postura de Estudar os conteúdos do na noite do dia anterior e praticar os exercícios do dia já pela parte da manhã.
         </p>
        </section>
       <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
