Adequa artigo e seçao aos limites exigidos.

--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
       <aside>
         <article class="lists">
           <h3 class="subtitle">Sobre o Meu Aprendizado</h3>
-          <p class="lado-esquerdo">
-            Na Trybe a rotina de aprendizado se faz em rítimo acelerado e constante. Todos os dias somos desafiados a aprender algo novo e, com empenho e dedicação, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. É um curso que não te dá espaço para arrastar dúvidas ou seguir adiante sem aprender por completo os onteúdos, pois cada nova etapa do processo de aprendizagem exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. Verdade seja dita: É um curso muito prático, rápido e empolgante, mas que também exige muito dos seus alunos.
+          <p class="left-side">
+            Na Trybe a rotina de aprendizado se faz em rítimo acelerado e constante. Todos os dias somos desafiados a aprender algo novo e, com empenho e dedicação, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. É um curso que não te dá espaço para arrastar dúvidas ou seguir adiante sem aprender por completo os onteúdos, pois cada nova etapa do processo de aprendizagem exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. É um curso muito prático, rápido e empolgante, mas que também exige muito dos seus alunos.
           </p>
         </article>
       </aside>
       <!-------------------------------------------------------------------------->
       <section class="secao">
         <h3 id="metodologia" class="subtitle">Metodologia de Aprendizado</h3>
-        <p class="lado-direito">
-          No início, procurei assistir os conteúdos nos dias e horários destinados para isso. Logo percebi que essa metodologia não seria promissora. Adotei então a postura de Estudar os conteúdos do na noite do dia anterior e praticar os exercícios do dia já pela parte da manhã.
+        <p class="right-side">
+          No início, procurei assistir os conteúdos nos dias e horários destinados para isso. Logo percebi que essa metodologia não seria promissora. Adotei então a postura de Estudar os conteúdos já na noite anterior e praticar os exercícios do dia já pela parte da manhã.
         </p>
        </section>
       <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
