--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
                 <li>Mongo</li>
                 <li>NodeJS</li>
             </ul>
+            <table>
+                <h2>Tabela</h2>
+                <tr>
+                    <th>dado 1</th>
+                    <th>dado 2</th>
+                </tr>
+                <tr>
+                    <td>detalhe 1</td>
+                    <td>detalhe 2</td>
+                </tr>
+                <tr>
+                    <td>detalhe 1.1</td>
+                    <td>detalhe 2.1</td>
+                </tr>
+            </table>
             <section>
             <article id="artigo">
                 <h2>Meu Aprendizado</h2>
