Adequa artigo e seçao aos limites exigidos.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <article class="lists">
           <h3 class="subtitle">Sobre o Meu Aprendizado</h3>
           <p class="left-side">
-            Na Trybe a rotina de aprendizado se faz em rítimo acelerado e constante. Todos os dias somos desafiados a aprender algo novo e, com empenho e dedicação, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. É um curso que não te dá espaço para arrastar dúvidas ou seguir adiante sem aprender por completo os onteúdos, pois cada nova etapa do processo de aprendizagem exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. É um curso muito prático, rápido e empolgante, mas que também exige muito dos seus alunos.
+            Na Trybe, a rotina é de aprendizado acelerado e constante. Todos os dias somos desafiados a aprender algo novo e assim, o progresso e a evolução nos trabalhos acontece de uma forma muito natural. Na Trybe não há espaço para arrastar dúvidas ou seguir adiante sem aprender por completo os onteúdos, pois cada nova etapa do processo exige do aluno a absorção e o entendimento pleno dos conteúdos anteriores. É um curso muito prático e empolgante, mas que também exige muito dos seus alunos.
           </p>
         </article>
       </aside>
@@ -61,7 +61,7 @@
       <section class="secao">
         <h3 id="metodologia" class="subtitle">Metodologia de Aprendizado</h3>
         <p class="right-side">
-          No início, procurei assistir os conteúdos nos dias e horários destinados para isso. Logo percebi que essa metodologia não seria promissora. Adotei então a postura de Estudar os conteúdos já na noite anterior e praticar os exercícios do dia já pela parte da manhã.
+          Depois de alguns testes, Adotei como metodologia a postura de Estudar os conteúdos já na noite anterior e praticar os exercícios do dia já pela parte da manhã.
         </p>
        </section>
       <!----------------------------------------- Seção-04: Tabela Virtudes ------------------------------------------------>
