--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="textos">
   <article id="lado-esquerdo">
     <h2> Meu Aprendizado</h2>
-        <p>Com pouco menos de 3 semanas no curso posso afirmar que tem sido uma jornada bastante interessante. As dinâmicas, aulas, conteúdo se completam de forma natural criando uma experiência de aprendizado que instiga a buscar conhecimento cada vez mais. Os exercícios variam de dificuldade mas são organizados de forma que uma boa leitura do que se pede nos permite fazer uma abstração e realizá-los sem grandes impecilhos. Apesar de eu já possuir um background em tecnologia sinto que desta vez que meu aprendizado realmente está em expansão e estou ansioso <strong>(positivamente)</strong> para aprender mais!</p>
+        <p>Com pouco menos de 3 semanas no curso posso afirmar que tem sido uma jornada bastante interessante. As dinâmicas, aulas, conteúdo completam-se de forma natural, criando uma experiência de aprendizado que instiga a buscar conhecimento cada vez mais. Os exercícios variam de dificuldade, mas são organizados de forma que uma boa leitura do que se pede nos permite fazer uma abstração e realizá-los sem grandes impecilhos. Apesar de possuir um background em tecnologia sinto que desta vez que meu aprendizado realmente está em expansão e estou ansioso <strong>(positivamente)</strong> para aprender mais!</p>
     </article>
     <aside id="lado-direito">
         <h2>Github</h2>
