--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projeto 1 Html+Css</title>
+    <link rel="stylesheet"  type="text/css" href="style.css">
+  
 </head>
 <body>
-    
-</body>
+
+asasas
+
+<body>
 </html>
