--- a/index.html
+++ b/index.html
@@ -1,81 +1,86 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson Learned</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header id="cabecalho">
-        <h1 id="titulo">Lições aprendidas - TRYBE </h1>
-    </header>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Lesson Learned</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header id="cabecalho">
+            <h1 id="titulo">Lições aprendidas - TRYBE </h1>
+        </header>
 
-    <div>
-        <div id="licoes_aprendidas">
-            <h2>aprendidas</h2>
-            <ul>
-                <li>aprendida 1</li>
-                <li>aprendida 2</li>
-                <li>aprendida 3</li>
-                <li>aprendida 4</li>
-                <li>aprendida 5</li>
-                <li>aprendida 6</li>
-                <li>aprendida 7</li>
-                <li>aprendida 8</li>
-                <li>aprendida 9</li>
-                <li>aprendida 10</li>
-            </ul>
-        </div>
-   
         <div>
-        <img src="perfil.jpg" alt="Uma foto de Leonardo José da Silveira" id="minha_foto">
+            <div id="licoes_aprendidas">
+                <h2>aprendidas</h2>
+                <ol>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                </ol>
+            </div>
+
+            <div>
+            <img src="perfil.jpg" alt="Uma foto de Leonardo José da Silveira" id="minha_foto">
+            </div>
+
+            <div id="licoes_a_aprender">
+                <h2>a aprendider</h2>
+                <ul>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                    <li>aprendida </li>
+                </ul>
+            </div>
         </div>
 
-        <div id="licoes_a_aprender">
-            <h2>a aprendider</h2>
-            <ol>
-                <li>aprendida </li>
-                <li>aprendida </li>
-                <li>aprendida </li>
-                <li>aprendida </li>
-                <li>aprendida </li>
-                <li>aprendida </li>
-                <li>aprendida </li>
-                <li>aprendida </li>
-                <li>aprendida </li>
-                <li>aprendida </li>
-            </ol>
-        </div>
-    </div>
-
-    <div>
         <div>
-            <article id="aprendizado">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis vitae odit magnam iusto dolores dolorum quaerat necessitatibus qui commodi, inventore nisi laborum tempore explicabo? Quisquam eos explicabo illo amet! Assumenda?
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis natus optio animi provident rem ducimus deleniti doloremque, consectetur, ex totam repellat, voluptate alias. Optio perferendis mollitia consectetur voluptatibus.
-            </article>
+            <div>
+                <article id="aprendizado">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis vitae odit magnam iusto dolores dolorum quaerat necessitatibus qui commodi, inventore nisi laborum tempore explicabo? Quisquam eos explicabo illo amet! Assumenda?
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis natus optio animi provident rem ducimus deleniti doloremque, consectetur, ex totam repellat, voluptate alias. Optio perferendis mollitia consectetur voluptatibus.
+                </article>
+            </div>
+
+            <section>
+                <aside id="passagem_de_Aprendizado">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quia et porro! Fugiat quos quibusdam ab tenetur nihil adipisci quidem cupiditate, quia non nemo perspiciatis accusamus quaerat, accusantium placeat. Laboriosam
+                </aside>
+            </section>
         </div>
 
-        <section>
-            <aside id="passagem_de_Aprendizado">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quia et porro! Fugiat quos quibusdam ab tenetur nihil adipisci quidem cupiditate, quia non nemo perspiciatis accusamus quaerat, accusantium placeat. Laboriosam
-            </aside>
-        </section>
-        
-    </div>
-
-    <div>
-        <footer id="rodape">
-            <nav>
-                <a href="https://www.linkedin.com/in/leonardojosedasilveira/" target="_blank">linkedin</a>
-                <a href="https://github.com/LeonardoJosedaSilveira" target="_blank">github</a>
-                <a href="https://leonardojosedasilveira.github.io" target="_blank">portfolio</a>
-                <a href="https://www.instagram.com/leonardojosedasilveira/" target="_blank">instagram</a>
-                <a href="https://www.facebook.com/leonardojosedasilveira/" target="_blank">facebook</a>
-            </nav>
-            Leonardo José da Silveira - Novembro de 2020
-        </footer>
-    </div>
-</body>
+        <table>
+            <td>
+                <tr>
+                    <div>
+                        <footer id="rodape">
+                            <nav>
+                                <a href="https://www.linkedin.com/in/leonardojosedasilveira/" target="_blank">linkedin</a>
+                                <a href="https://github.com/LeonardoJosedaSilveira" target="_blank">github</a>
+                                <a href="https://leonardojosedasilveira.github.io" target="_blank">portfolio</a>
+                                <a href="https://www.instagram.com/leonardojosedasilveira/" target="_blank">instagram</a>
+                                <a href="https://www.facebook.com/leonardojosedasilveira/" target="_blank">facebook</a>
+                            </nav>
+                            Leonardo José da Silveira - Novembro de 2020
+                        </footer>
+                    </div>
+                </tr>
+            </td>
+        </table>
+    </body>
 </html>
