correcoes finais do code climate, verificacao do article

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </ul>
         </nav>
     </header>
+    <section><
     <div class="textos">
   <article class="lado-esquerdo">
     <h2> Meu Aprendizado</h2>
@@ -29,6 +30,7 @@
         <p>Uma ferramenta que em primeiro momento me assustou um pouco, mas essencial para a vida de qualquer desenvolvedor. Depois que aprendemos suas funções básicas, fica bem mais fácil manipular sem medo de errar</p>
     </aside>
     </div>
+    /section>
     <section>
      <div id="conteudo">
             <div id='coluna1'>
