numero de caracteres de artigo diminuido

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             </ul>
         </nav>
     </header>
-    <section><
+    <section>
     <div class="textos">
   <article class="lado-esquerdo">
     <h2> Meu Aprendizado</h2>
-        <p>Com pouco menos de 3 semanas no curso posso afirmar que tem sido uma jornada bastante interessante. As dinâmicas, aulas, conteúdo completam-se de forma natural, criando uma experiência de aprendizado que instiga a buscar conhecimento cada vez mais. Os exercícios variam de dificuldade, mas são organizados de forma que uma boa leitura do que se pede nos permite fazer uma abstração e realizá-los sem grandes impecilhos. Apesar de gitpossuir um background em tecnologia sinto que desta vez que meu aprendizado realmente está em expansão e estou ansioso <strong>(positivamente)</strong> para aprender mais!</p>
+        <p>Com pouco menos de 3 semanas no curso posso afirmar que tem sido uma jornada bastante interessante. As dinâmicas, aulas, conteúdo completam-se de forma natural, criando uma experiência de aprendizado que instiga a buscar conhecimento cada vez mais. Os exercícios variam de dificuldade, mas são organizados de forma que uma boa leitura nos permite fazer uma abstração e realizá-los sem grandes impecilhos. Apesar de gitpossuir um background em tecnologia sinto que desta vez que meu aprendizado realmente está em expansão e estou ansioso <strong>(positivamente)</strong> para aprender mais!</p>
     </article>
     <aside class="lado-direito">
         <h2>Github</h2>
