modificando numero de caracteres do artigo e do aside

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="textos">
   <article class="lado-esquerdo">
     <h2> Meu Aprendizado</h2>
-        <p>Com pouco menos de 3 semanas no curso posso afirmar que tem sido uma jornada bastante interessante. As dinâmicas, aulas, conteúdo completam-se de forma natural, criando uma experiência de aprendizado que instiga a buscar conhecimento cada vez mais. Os exercícios variam de dificuldade, mas são organizados de forma que uma boa leitura nos permite fazer uma abstração e realizá-los sem grandes impecilhos.</p>
+        <p>Com pouco menos de 3 semanas no curso posso afirmar que tem sido uma jornada bastante interessante. As dinâmicas, aulas, conteúdo completam-se de forma natural, criando uma experiência de aprendizado que instiga a buscar conhecimento cada vez mais. Os exercícios variam de dificuldade, mas são organizados de forma que uma boa leitura nos permite fazer uma abstração e realizá-los sem grandes impecilhos. É um método de ensino incrível!</p>
     </article>
     <aside class="lado-direito">
         <h2>Github</h2>
-        <p>Uma ferramenta que em primeiro momento me assustou um pouco, mas essencial para a vida de qualquer desenvolvedor. Depois que aprendemos suas funções básicas, fica bem mais fácil manipular sem medo de errar</p>
+        <p>Uma ferramenta que em primeiro momento me assustou um pouco, mas essencial para a vida de qualquer desenvolvedor que deseja versionar seus projetos de forma segura. Depois que aprendemos suas funções básicas, fica bem mais fácil manipular sem medo de errar.</p>
     </aside>
     </div>
     /section>
