--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         </header>
 
         <div>
-            <div id="licoes_aprendidas">
+            <div>
                 <h2>aprendidas</h2>
-                <ol>
+                <ol id="licoes_aprendidas">
                     <li>aprendida </li>
                     <li>aprendida </li>
                     <li>aprendida </li>
@@ -32,9 +32,9 @@
             <img src="perfil.jpg" alt="Uma foto de Leonardo José da Silveira" id="minha_foto">
             </div>
 
-            <div id="licoes_a_aprender">
+            <div>
                 <h2>a aprendider</h2>
-                <ul>
+                <ul id="licoes_a_aprender">
                     <li>aprendida </li>
                     <li>aprendida </li>
                     <li>aprendida </li>
@@ -51,36 +51,47 @@
 
         <div>
             <div>
-                <article id="aprendizado">
+                <article id="aprendizado" class="lado-esquerdo">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis vitae odit magnam iusto dolores dolorum quaerat necessitatibus qui commodi, inventore nisi laborum tempore explicabo? Quisquam eos explicabo illo amet! Assumenda?
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis natus optio animi provident rem ducimus deleniti doloremque, consectetur, ex totam repellat, voluptate alias. Optio perferendis mollitia consectetur voluptatibus.
                 </article>
             </div>
 
             <section>
-                <aside id="passagem_de_Aprendizado">
+                <aside id="passagem_de_Aprendizado" class="lado-direito">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa quia et porro! Fugiat quos quibusdam ab tenetur nihil adipisci quidem cupiditate, quia non nemo perspiciatis accusamus quaerat, accusantium placeat. Laboriosam
                 </aside>
             </section>
         </div>
 
-        <table>
-            <td>
+        <footer id="rodape">
+            <table id="tabela">
                 <tr>
-                    <div>
-                        <footer id="rodape">
-                            <nav>
-                                <a href="https://www.linkedin.com/in/leonardojosedasilveira/" target="_blank">linkedin</a>
-                                <a href="https://github.com/LeonardoJosedaSilveira" target="_blank">github</a>
-                                <a href="https://leonardojosedasilveira.github.io" target="_blank">portfolio</a>
-                                <a href="https://www.instagram.com/leonardojosedasilveira/" target="_blank">instagram</a>
-                                <a href="https://www.facebook.com/leonardojosedasilveira/" target="_blank">facebook</a>
-                            </nav>
+                    <nav>
+                        <td>
+                            <a href="https://www.linkedin.com/in/leonardojosedasilveira/" target="_blank">linkedin</a>
+                        </td>
+                        <td>
+                            <a href="https://github.com/LeonardoJosedaSilveira" target="_blank">github</a>
+                        </td>
+                        <td>
+                            <a href="https://github.com/LeonardoJosedaSilveira" target="_blank">github</a>
+                        </td>
+                        <td>
+                            <a href="https://leonardojosedasilveira.github.io" target="_blank">portfolio</a>
+                        </td>
+                        <td>
+                            <a href="https://www.instagram.com/leonardojosedasilveira/" target="_blank">instagram</a>
+                        </td>
+                        <td>
+                            <a href="https://www.facebook.com/leonardojosedasilveira/" target="_blank">facebook</a>
+                        </td>
+                        <td>
                             Leonardo José da Silveira - Novembro de 2020
-                        </footer>
-                    </div>
+                        </td>
+                    </nav>
                 </tr>
-            </td>
-        </table>
+            </table>
+    </footer>
     </body>
 </html>
