Structuring the page3.4 - corrections

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </ul>
     </aside>
     <aside class="aside-right">
-        <a href="https://www.facebook.com/silveira.jean.9" target="_blank">F A C E B O O K</a>
+        <a href="https://www.facebook.com/silveira.jean.9" target="_blank"></a>
         <p>Denomina-se cultura punk os estilos dentro da subcultura e tribo urbana que possuem certas características comuns àquelas ditas punk, como por exemplo o princípio de autonomia do faça-você-mesmo, o interesse pela aparência agressiva, a simplicidade, o sarcasmo niilista e a subversão da cultura.</p>
     </aside>
     <article class="article">
