Menos de 600 caracteres

--- a/index.html
+++ b/index.html
@@ -197,10 +197,7 @@
         O que realmente importa, é nos conectar.</p>
         
         <p>Para que o mundo se transforme, basta crer.<br>
-        Mude primeiro, você vai ver.</p>
-        
-        <p>Estou livre de medo e incerteza, expulso agora miséria e pobreza.<br>
-        A pura abundância estou ciente, dos reinos do alto é proveniente.</p></div>
+        Mude primeiro, você vai ver.</p></div>
     </article>
     <footer id="rodape">
         <p>Criado por <a href="https://www.linkedin.com/in/kevincfraga/" target="_blank">Kevin Fraga</a>. </p>
