Gutting my poem :frowning_face:

--- a/index.html
+++ b/index.html
@@ -194,10 +194,7 @@
         Busque a paz e harmonia, pois daí vem a alegria.</p>
         
         <p>Nunca estamos sós, em nosso caminhar.<br>
-        O que realmente importa, é nos conectar.</p>
-        
-        <p>Para que o mundo se transforme, basta crer.<br>
-        Mude primeiro, você vai ver.</p></div>
+        O que realmente importa, é nos conectar.</p></div>
     </article>
     <footer id="rodape">
         <p>Criado por <a href="https://www.linkedin.com/in/kevincfraga/" target="_blank">Kevin Fraga</a>. </p>
