Ajustando tamanho das fontes

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
         
     </main>
-    <section id="artigo_barra_lateral">
+    <section id="artigo_barra_lateral" class="define-fonte">
         <article class="lado-esquerdo">
             <h2 class="titulos">Conteudo Aprendido</h2>
             <p>Falando de maneira mais detalhada sobre a aprendizagem até aqui, iniciamos com muita <strong>softskill</strong>, desenvolvendo essa habilidade em grupo. Iniciamos o aprendizado em <strong>hardskill</strong> entendendo como funciona a arquitetura do unix e seus principai comandos, iniciamos o aprendizado em git e github, entendendo a diferença entre eles e como esse trabalham em conjunto. E finalmente chegamos ao momento tão esperado, colocar a mão no código, com Html e CSS iniciamos nossos primeiros conteudos de aprendizado rumo a formação fullstack desenvolvimento web.  </p>
