--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
         <p>Nunca estamos sós, em nosso caminhar.<br>
         O que realmente importa, é nos conectar.</p></div>
     </article>
+    <aside class="lado-esquerdo">
+      <p>Estou muito feliz por fazer parte da Trybe, realmente é uma experiência única.</p>
+      <p>Tenho certeza de que minha vida nunca mais será a mesma!</p>
+    </aside>
     <footer id="rodape">
         <p>Criado por <a href="https://www.linkedin.com/in/kevincfraga/" target="_blank">Kevin Fraga</a>. </p>
     </footer>
