listas ordenada e nao ordenada criadas e rodape criado.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
 
 <body>
     <header id="cabecalho"><h1 id="titulo">Lessons Learned | Trybe</h1></header>
+    <img id="minha_foto" src="pictures/perfil.jpeg" alt="Foto de Perfil">
+    <ol id="licoes_aprendidas">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
+    <ul id="licoes_a_aprender">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <footer id="rodape"></footer>
 </body>
 
 </html>
