--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1 id="titulo">Bruna Ferreira</h1>
 </header>
 <body>
-    <img src="rsz_brunaferreira.jpg" id="minha_foto" alt="Minha Foto">
+<figure>
+    <img src="rsz_brunaferreira.jpg" id="minha_foto" width="150px" alt="Minha Foto">
+</figure>
 <article>
     <p>Comecei a desenvolver praticamente do 0. Não tinha quase nada de conhecimento sobre Desenvolvimento Web, não sabia nem mexer no terminal, mas agora já sei! Já sei também até a usar o GitHub, quem diria... Agora, tenho uma boa base de conhecimento sobre HTML e CSS, ainda estou muito longe de "chegar lá", mas já fiz muito mais do que poderia imaginar há 3 semanas atrás. Estou muito animada com o que tem pela frente! 
     </p>
@@ -46,6 +48,21 @@
         <li>Desenvolver meus projetos e aperfeiçoá-los </li>
         <li>Estar pronta para trabalhar como Dev Front-end</li>
     </ul>
+</section>
+<section>
+    <table align="center" border="2" width="40%" bgcolor="pink">
+        <tr>
+            <th>Nome</th>
+            <th>Idade</th>
+            <th>Atividade</th>
+        </tr>
+        <tr>
+            <td>Bruna Ferreira</td>
+            <td>27</td>
+            <td>Estudante na Trybe</td>
+        </tr>
+    </table>
+    
 </section>
 <nav>
     <p><a href="https://eucurtoviajar.com/"target=_blank >Acesse o meu Blog!</a></p>
