Fazendo texto ficarem um ao lado do outro

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         Antes de começar a Trybe, quando vi o GitHub pela primeira vez, imaginei que nunca iria entendê-lo. Mas hoje consigo usá-lo e manusear alguns de seus mecanismos, e tem sido muito rápido o meu desenvolvimento com ele. Aprendi tudo na Trybe.
     </p>
 </aside>
-<section>
+<section class="lado-esquerdo">
     <ol id="licoes_aprendidas">
         <li>Conhecer o Unix, Shell e Bash</li>
         <li>Usar o terminal</li>
@@ -35,7 +35,8 @@
         <li>Usar o VS Code</li>
         <li>Trabalhar com maior efetividade no HTML e CSS</li>
     </ol>
-
+</section>
+<section class="lado-direito">
     <ul id="licoes_a_aprender">
         <li>Entender muito bem o JavaScript</li>
         <li>Ter muitas habilidades com HTML e CSS</li>
