--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <img src="rsz_brunaferreira.jpg" id="minha_foto" width="150px" alt="Minha Foto">
 </figure>
 <article>
-    <p>Comecei a desenvolver praticamente do 0. Não tinha quase nada de conhecimento sobre Desenvolvimento Web, não sabia nem mexer no terminal, mas agora já sei! Já sei também até a usar o GitHub, quem diria... Agora, tenho uma boa base de conhecimento sobre HTML e CSS, ainda estou muito longe de "chegar lá", mas já fiz muito mais do que poderia imaginar há 3 semanas atrás. Estou muito animada com o que tem pela frente! 
-    </p>
+    <p> Comecei a desenvolver praticamente do 0. Não tinha quase nada de conhecimento sobre Desenvolvimento Web, não sabia nem mexer no terminal, mas agora já sei! Já sei também até a usar o GitHub, quem diria... Agora, tenho uma boa base de conhecimento sobre HTML e CSS, ainda estou muito longe de "chegar lá", mas já fiz muito mais do que poderia imaginar há 3 semanas atrás. Estou muito animada com o que tem pela frente! </p>
 </article>
 <aside>
     <p>
@@ -63,7 +62,6 @@
             <td>Estudante na Trybe</td>
         </tr>
     </table>
-    
 </section>
 <nav>
     <p><a href="https://eucurtoviajar.com/"target=_blank >Acesse o meu Blog!</a></p>
