barra superior para position fixed.

--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lessons Learned | Trybe</h1>
-    </header>
-
-    <nav>
         <a href="/">Home</a>
         <a href="/">Login</a>
-    </nav>
-
+    </header>
+    <br> <br> <br> <br> <br>
     <img id="minha_foto" src="pictures/perfil.jpeg" alt="Foto de Perfil">
-    <br>
-    <a href="https://hnq-brt.github.io/" target="_blank">Portfolio | Lucas Henrique</a>
-    <br>
-    <section>
+    <nav>
+        <a href="https://hnq-brt.github.io/" target="_blank">Portfolio | Lucas Henrique</a>
+    </nav>
     <ol id="licoes_aprendidas">
         <li>exemplo0</li>
         <li>exemplo1</li>
@@ -50,8 +46,8 @@
         <li>exemplo9</li>
     </ul>
     <br>
-    <article>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</article>
-    <section>
+    <article class="lado-esquerdo">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</article>
+    <section class="lado-direito">
         <aside>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</aside>
     </section>
     <footer id="rodape"></footer>
