--- a/index.html
+++ b/index.html
@@ -1,15 +1,68 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html id="all" lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto 1 Html+Css</title>
     <link rel="stylesheet"  type="text/css" href="style.css">
-  
+    <header id="cabecalho"> 
+         <h1 id="titulo">Lições Aprendidas na Trybe!!</h1>
+         <nav class="link">
+            <ol>
+                <li class="link"><a href="#">Inicio</a></li>
+                <li class="link"><a  href="#">Fim</a></li>
+            </ol>
+        </nav>
+    </header>
+    <img id="minha_foto"src="1.jpg" alt="Super metroid">
 </head>
 <body>
-
-asasas
-
+    <main id=main_part>
+        <article>
+            <h2>O que dizer até agora?</h2>
+            <aside>
+                <p>Para fixar esse conteúdo, realize os dois exercícios a seguir. Para realizar o exercício, abra o link e leia o enunciado do desafio.</p>
+            </aside>
+            <p>Para fixar esse conteúdo, realize os dois exercícios a seguir. Para realizar o exercício, abra o link e leia o enunciado do desafio. Após entender o que foi pedido, desenvolva a solução e então verifique se você conseguiu cumprir com o que foi solicitado. Ao finalizar o exercício, feche a página, retorne ao conteúdo e abra o próximo exercício
+            </p>
+        </article>
+    </main>    
+     <div>
+             <h2 class="list">Lições</h2>
+     </div>
+             <div class="list">
+                 <h3>Aprendidas</h3>
+                     <ol id="licoes_aprendidas">
+                         <li>Unix</li>
+                         <li>Git</li>
+                         <li>Github</li>
+                         <li>Empatia</li>
+                         <li>HTML</li>
+                         <li>Slack</li>
+                         <li>CSS</li>
+                         <li>Inspect</li>
+                         <li>Zoom</li>
+                         <li>HTML Semântico</li>
+                     </ol>
+             </div>
+            <div class="list" id="unordened">
+                 <h3>Que irei aprender</h3>
+                    <ul id="licoes_a_aprender">
+                         <li>Javascript</li>
+                         <li>DOM</li>
+                         <li>Mais empatia</li>
+                         <li>CSS Responsive</li>
+                         <li>ES6</li>           
+                         <li>HOF</li>
+                         <li>Unit tests</li>
+                         <li>React</li>
+                         <li>Node</li>
+                          <li>SQL</li>
+                  </ul>
+             </div>
+    <footer id="rodape">
+        <p>A repetição é a chave para o aprendizado.</p> 
+        <nav id="cytus"> <a href="https://cytus.fandom.com/wiki/Xenon" target="_blank">"?????"</a></nav> 
+    </footer>
 <body>
 </html>
