--- a/index.html
+++ b/index.html
@@ -45,6 +45,32 @@
         <li>exemplo8</li>
         <li>exemplo9</li>
     </ul>
+    <table>
+        <tr>
+            <th>Interesses</th>
+            <th>Habilidades</th>
+        </tr>
+        <tr>
+            <td>Programação</td>
+            <td>Trabalho em Equipe</td>
+        </tr>
+        <tr>
+            <td>Eletrônica</td>
+            <td>Inteligência Social</td>
+        </tr>
+        <tr>
+            <td>Design</td>
+            <td>Inteligência Emocional</td>
+        </tr>
+        <tr>
+            <td>Música</td>
+            <td>Empatia</td>
+        </tr>
+        <tr>
+            <td>Jogos</td>
+            <td>Automotivação</td>
+        </tr>
+      </table>
     <br>
     <article class="lado-esquerdo">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</article>
     <section class="lado-direito">
