diretório de images/ estilização da tabela/ inicio do texto

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     </head>
     <body>
         <header id=cabecalho>
-            <h1 id="titulo">Lições aprendidas - Trybe!</h1>
+            <h1 id="titulo">Lições aprendidas - <spam style="color:teal; font-weight: bold;">Trybe</spam>!</h1>
             <nav id="menu">
                 <ul>
-                    <li><a>Ínicio</a></li>
-                    <li><a>Habilidades</a></li>
-                    <li><a>Contato</a></li>
+                    <li><a href="#top">Ínicio</a></li>
+                    <li><a href="#top">Habilidades</a></li>
+                    <li><a href="#rodape">Contato</a></li>
                 </ul>
             </nav>
         </header>
         <main>
-            <img id="minha_foto" src="fotome.jpg" alt="Vinicius Palenske">
+            <img id="minha_foto" src="images/fotome.jpg" alt="Vinicius Palenske">
             <div id="caixa_licoes">
                 <h2>Habilidades</h2>
                 <ol class="lado-esquerdo" id="licoes_aprendidas">
@@ -50,80 +50,99 @@
                     <li>Ciência da computação</li>
                 </ul>
             </div>
+            <section id="sobremim">
+                <h2>Sobre mim</h2>
+                <p>
+                    <em>– Olá, meu nome é Vinicius Palenske e tenho 27 anos. Me sinto cada vez mais próximo do sucesso na carreira em tecnologia graças a <a href="http://betrybe.com/" target="_blank" <spam style="color:teal; font-weight: bold; text-decoration: none;">Trybe</spam>!</em></a>
+                </p>
+            </section>
             <article class="artigo">
                 <h2>Processo de aprendizagem ativa</h2>
                 <section class="sessao" id="texto-principal">
                     <h3>Dias na tribo</h3>
-                    <br>
                     <p>
-                        Dolor varius accumsan sapien interdum rutrum posuere placerat iaculis, sociosqu aenean risus tellus est enim scelerisque ultrices, convallis curae bibendum netus posuere duis aliquam. inceptos euismod rhoncus placerat aliquet, placerat eu nec pharetra torquent, habitant aliquam lorem. volutpat placerat posuere laoreet nisi molestie urna dolor pulvinar eros, porttitor amet pharetra potenti non scelerisque donec nulla lacus, habitasse proin sapien sollicitudin ac viverra sed in. sapien donec senectus integer sagittis tempus vestibulum inceptos nostra curabitur maecenas, aliquam eleifend purus fames adipiscing donec lacus non bibendum, sed sollicitudin etiam ut vehicula vitae dapibus odio eleifend.
+                        Aguardei o inicio do curso com muito entusiasmo, preparei todo o ambiente de estudo e decidi me dedicar ao máximo nessa jornada.
                     </p>
                     <p>
-                        Rhoncus sociosqu sem duis sem facilisis adipiscing curae volutpat, elementum tortor sollicitudin risus himenaeos imperdiet dictum.
-                        sociosqu purus viverra orci ullamcorper consectetur malesuada urna fames mauris nisl sit phasellus, habitasse dapibus quam proin vitae sapien etiam vulputate tincidunt auctor turpis. sem auctor tempus etiam sodales a aenean platea, vel mollis vestibulum himenaeos inceptos per, fringilla taciti duis semper lorem sapien. mauris vulputate massa rutrum nostra a enim cubilia, hendrerit ut nostra interdum sapien ultricies eu ut, eget donec elementum ultrices eget vestibulum. lacus habitant lacus magna sagittis arcu sodales duis quisque id auctor, diam condimentum purus risus ultricies aenean ut euismod morbi. 
+                        Logo no inicio percebi que a trybe tinha um diferencial, uma proposta sincera e inédita a respeito de carreira e aprendizado. A preocupação com o sucesso da pessoa estudante era muito evidente e isso me confortou. Tive uma sensação de estar sendo guiado pra algo maior, algo que eu nem imagino o que seja, mas eu sentia que iria dar certo.
                     </p>
                     <p>
-                        Eget libero morbi nunc pellentesque gravida vulputate torquent neque consequat, porttitor habitant cursus erat ultrices quis
-                        risus volutpat senectus, eu ultrices ac curabitur velit neque porttitor blandit. donec ac sapien rutrum enim, aptent porta interdum, in sociosqu integer. sociosqu elit himenaeos in vel netus pulvinar donec, pulvinar ante nibh curabitur netus aptent, tincidunt vestibulum aliquet nulla praesent sit. Conubia magna lacus convallis ligula torquent donec ullamcorper elementum amet sodales placerat, posuere conubia massa tellus nam ipsum lorem dictum conubia tincidunt. curae laoreet cras pharetra fusce imperdiet diam nec ultrices, viverra erat tellus in neque euismod nisi turpis, sem eros quisque felis luctus amet proin.
-                    </p>
-                    <p>
-                        Pellentesque felis congue commodo litora auctor dictumst taciti, mi curae facilisis himenaeos aenean hendrerit rhoncus volutpat, tempus donec ac justo faucibus amet. tempus nulla at accumsan libero sodales etiam integer, non netus metus euismod curabitur ullamcorper. posuere habitant dictum ullamcorper senectus odio ligula vehicula tempus, purus lectus leo porta morbi et varius urna mattis, tempor condimentum dapibus aenean ut taciti lacinia. duis commodo auctor per netus fermentum ac non taciti, senectus augue inceptos curabitur mauris quam aliquet et, odio quisque varius primis cras nibh egestas. eget ligula at eu sagittis molestie integer aliquam ad, fringilla ligula justo aenean porttitor convallis consequat.
+                        Um jovem padauan guiado pelo mestre Gabriel Oliva.
                     </p>
                 </section>
             </article>
         </main>
         <aside id="canto">
-            <h2>Momentos x Aprendizado</h2>
+            <h2>Momentos de aprendizado</h2>
             <section class="sessao">
                 <h3>O dia em que eu aprendi a usar o Github</h3><br>
+                <p style="text-align: right; font-size: small;">
+                    <em>E então conheci a ferramenta que me acompanhá por todo o resto de minha vida como programador...</em>
+                </p><br>
                 <p>
-                    Consequat et etiam dui id velit turpis accumsan, eget commodo scelerisque hac scelerisque tortor amet, urna quis ut porttitor class mauris. donec ad etiam curabitur purus scelerisque, malesuada enim condimentum sapien purus enim, a per taciti vel. sit orci imperdiet eros metus dapibus luctus nunc pulvinar felis imperdiet, magna class pretium vitae pellentesque eleifend curabitur fringilla volutpat per ac, ornare enim pretium odio dolor sociosqu justo mauris euismod. tellus fusce inceptos phasellus fermentum nullam congue et dolor etiam, lectus nibh litora euismod justo suspendisse accumsan ad malesuada, egestas proin vestibulum taciti turpis cubilia lectus consequat.
+                    Custei a entender o propósito do GitHub em meu primeiro contato, achei complicado e até desnecessário. Eu poderia muito bem guardar meus trabalhos no Drive (risos). Na verdade eu sentia o github uma coisa muito distante, coisa que só <i>Devs</i> experientes usavam em seus projetos open-source para salvar vidas de usuários aflitos com o linux (eu).
+                </p> 
                 <p>
-                    Cubilia tellus ac hac purus platea libero, facilisis magna platea primis elementum, aliquet ad vitae ligula elit. per pharetra consequat vestibulum phasellus suspendisse, per ut cursus ante enim, arcu nunc dui ultrices. donec facilisis vitae faucibus platea ornare varius, rutrum orci justo cubilia senectus blandit, pellentesque quis vulputate dictumst in. consequat sollicitudin luctus magna imperdiet ultricies volutpat, lectus odio tortor commodo dolor fames, quam accumsan venenatis non sollicitudin. neque fames nec malesuada dapibus amet fermentum ante quam sem lorem, sed accumsan leo hac erat integer vehicula viverra congue cras conubia, id in platea mattis mollis proin tortor aenean cubilia.
+                    Mas graças a comunidade da <spam style="color:teal; font-weight: bold;">Trybe</spam> eu tive a oportunidade de conhecer o passo a passo de como usar o GitHub na prática. E cá estou realizando meu primeiro projeto tranquilamente, sem perder uma vírgula do meu código, com muitos commits, pushs e reviews. 
                 </p>
                 <p>
-                    Sapien venenatis sem consectetur, arcu curabitur.
+                    O git foi complicado no começo em questão de organização do espaço de trabalho. Mas como todo conhecimento novo, a prática fez a coisa começar a fazer sentido. E foi assim que segui aprendendo as outras lições que a <spam style="color:teal; font-weight: bold;">Trybe</spam> ofereceu: com muita prática e desafio!
                 </p>
             </section>
             <div id="tabela">
-                <h3>Tabela de aprendizado</h3><br>
+                <h2>Difilcudade das lições</h2>
                 <table id="dificuldade_skills">
                     <tr>
-                        <th>Dificudade</th>
+                        <th>Conteúdo</th>
                         <th>Fácil</th>
                         <th>Médio</th>
                         <th>Difícil</th>
                     </tr>
                     <tr>
-                        <td> UNIX </td>
-                        <td>X</td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td> BASH </td>
+                        <th> Soft-Skills </th>
                         <td></td>
                         <td>X</td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td> HTML </td>
+                        <th> Unix & Bash </th>
+                        <td>X</td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th> Git & GitHub </th>
+                        <td></td>
+                        <td></td>
+                        <td>X</td>
+                    </tr>
+                    <tr>
+                        <th> HTML </t>
                         <td></td>
                         <td>X</td>
                         <td></td>
                     </tr>
                     <tr>
-                        <td> CSS </td>
+                        <th> CSS </th>
                         <td></td>
                         <td></td>
                         <td>X</td>
+                    </tr>
+                    <tr>
+                        <th> HTML Semântico </th>
+                        <td></td>
+                        <td>X</td>
+                        <td></td>
                     </tr>
                 </table>
             </div>
-            <p>
-                Sapien venenatis sem consectetur, arcu curabitur.
-            </p>
+            <p>Díficuldade relativa ao encarar o aprendizado proposto pela <spam style="color:teal; font-weight: bold;">Trybe</spam></p>
         </aside>
-        <footer id="rodape"> <p>Direitos reservados a mim.<br><a href="https://github.com/palenske" target="_blank"><p>GitHub</p></a>- 2020, um ano muito louco -</p></footer>
+        <footer id="rodape"> <p>Todos os direitos reservados.
+            <div id="contact">
+            <a href="https://github.com/palenske" target="_blank"><img class="contactpic" src="images/git.jpg"></a>
+            <a href="https://www.linkedin.com/in/vinicius-palenske-7229a81ba/" target="_blank"><img class="contactpic" src="images/linke.jpg"></a>
+            <a href="https://api.whatsapp.com/send?phone=554198064428&text=Ol%C3%A1%2C%20quero%20comprar%20um%20site!" target="_blank"><img class="contactpic" src="images/wpp.jpg"></a>
+            </div>- 2020, um ano muito louco -</p></footer>
     </body>
 </html>
