--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
     <article>
       <h2>Meu querido aprendizado</h2>
       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-         Lorem Ipsum has been the industry's standard dummy text ever since the 1500sLorem
-         Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-         has been the industry's standard dummy text ever since the 1500sLorem Ipsum is
-         simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-         the industry's standard dummy text ever since the 1500s.
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500sLorem
+        Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+        Ipsum has been the industry's standard dummy text ever since the 1500sLorem
+        Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+        Ipsum has been the industry's standard dummy text ever since the 1500s.
+        text of the printing and typesetting industry. Lorem Ipsum has been the
+        industry's standard dummy text ever since the 1500s.
         </p>
     </article>
   </main>
